# sugrk

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: Cache.cmake  CompilerWarnings.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
sugrk/: CMakeLists.txt  color.cpp  color.hpp  image.hpp  log.cpp  log.hpp  raytracer.cpp  raytracer.hpp  scene.hpp  sugrk.cpp  threadpool.hpp  ui.cpp  ui.hpp  util.hpp
